# FACE-DETECTION-SYSTEM

./: .gitattributes  .gitignore  .vercelignore  README.md  app.py  convert_to_onnx.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup_and_run.sh  train_model.py  vercel.json
dataset/face-mask-extracted/Face-Mask-Detection-master/: # Code Citations.md
model/: label_binarizer.pkl  metrics.pkl
static/css/: style.css
static/js/: main.js
templates/: index.html
