[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "face-mask-detection"
version = "1.0.0"
description = "Face Mask Detection System"
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.0",
    "opencv-python==4.9.0.80",
    "numpy>=1.24.2",
    "tensorflow>=2.16.0",
    "Pillow>=10.2.0",
    "requests==2.31.0",
    "scikit-learn"
]
